# remit-compare

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: README.md
src/remit_compare/: cli.py
src/remit_compare/core/: __init__.py  base_provider.py  exceptions.py  fx.py  models.py
src/remit_compare/providers/: paypal.py  revolut.py  wise.py
tests/core/: test_fx.py
tests/providers/: test_paypal.py  test_revolut.py  test_wise.py
